fix swagger paths
