# internal/api/handlers/handlers.go
@@ -88,12 +88,14 @@ func AttachAllRoutes(s *api.Server) {
 		stream.PutStreamNameRoute(s),
 		stream.PutStreamRoute(s),
 		subscription.DeleteCancelSubscriptionRoute(s),
+		subscription.GetActiveSubscriptionRoute(s),
 		subscription.GetPlanRoute(s),
 		subscription.GetPlansRoute(s),
 		subscription.GetSubscriptionListRoute(s),
 		subscription.GetUserTransactionsRoute(s),
 		subscription.PostPlanRoute(s),
 		subscription.PostRenewRoute(s),
+		subscription.PostResubscribeRoute(s),
 		subscription.PostSubscribeRoute(s),
 		subscription.PostUpgradeRoute(s),
 		tags.DeleteTagRoute(s),
